--- a/kandan/src/Style/cadCadastro.sass
+++ b/kandan/src/Style/cadCadastro.sass
@@ -4,16 +4,58 @@ form
     display: flex
     flex-direction: column
     gap: 1rem
-    width: 100vw
+    width: 90%
     height: auto
     padding: 5px
 
-    input
-        font-weight: bold
-        height: 2rem
+    h1
+        text-align: center
+
+    .input_container
+        display: flex
+        flex-direction: column
+        gap: 0.5rem
+
+        select 
+            background-color: rgb(230, 230, 230)
+            height: 2.5rem
+            border: none
+            border-radius: 0.3rem
+            padding: 0.5rem
+            cursor: pointer
+
+            &:hover
+                background-color: rgb(255, 255, 255)
+
+        input
+            height: 2.5rem
+            border: none
+            border-bottom: 1px solid $cor-destaque
+            background-color: rgb(230, 230, 230)
+            border-radius: 0.3rem 0.3rem 0 0
+            outline: none
+            padding: 0.5rem
+
+            &:hover
+                background-color: rgb(255, 255, 255)
+        
+        p
+            display: flex
+            align-items: center
+            gap: 0.5rem
+            background-color: rgba(167, 0, 0, 0.178) 
+            border: 2px solid rgb(167, 0, 0)
+            border-radius: 0.5rem
+            color: rgb(167, 0, 0)
+            font-weight: 600
+            margin-top: 0.5rem
+            padding: 0.7rem
 
     button
-        padding: 10px
         background-color: $cor-destaque
+        border-radius: 0.5rem
+        border: none
         color: white
         cursor: pointer
+        font-weight: 700
+        padding: 1rem
