Página de tarefas

--- a/kandan/src/Components/Column/style.sass
+++ b/kandan/src/Components/Column/style.sass
@@ -1,9 +1,11 @@
+@use './../../Style/variable' as *
+    
 .coluna 
+    display: flex
+    flex-direction: column
     background-color: $background
     border: 1px solid #000
     padding: 1rem
     min-height: 400px
-    display: flex
-    flex-direction: columns
     gap: 10px
     flex: 1 1 320px // pode deixar grande? pode deixar pequeno? tamanho
