--- a/kandan/src/Style/cadCadastro.sass
+++ b/kandan/src/Style/cadCadastro.sass
@@ -59,3 +59,17 @@ form
         cursor: pointer
         font-weight: 700
         padding: 1rem
+
+.sectionQuadro 
+    display: flex
+    gap: 1rem
+
+.mensagemCard
+    position: absolute
+    top: 95%
+    background-color: rgb(116, 116, 116)
+    border: 2px solid rgb(31, 31, 31)
+    padding: 0.5rem
+    border-radius: 0.5rem
+    color: rgb(31, 31, 31)
+    font-weight: 500
