Atualização do front, página de tarefas atualizada

--- a/kandan/src/Style/cadCadastro.sass
+++ b/kandan/src/Style/cadCadastro.sass
@@ -62,7 +62,10 @@ form
 
 .sectionQuadro 
     display: flex
-    gap: 1rem
+    gap: 3rem
+
+    div
+        width: 20vw
 
 .mensagemCard
     position: absolute
