--- a/kandan/src/Components/Card/style.sass
+++ b/kandan/src/Components/Card/style.sass
@@ -2,8 +2,25 @@
     display: flex
     flex-direction: column
     width: 40v
-    background-color: rgba(197, 197, 197, 0.8)
-    border: 1px solid rgb(197, 197, 197)
+    color: white
+    font-weight: 300
+    background-color: rgb(0, 44, 110)
     border-radius: 0.5rem
-    padding: 0.8rem
+    padding: 1rem
     gap: 0.5rem
+
+    .section_card_button
+        display: flex
+        gap: 1rem
+
+        button
+            padding: 0.3rem 1rem
+            border: none
+            outline: none
+            cursor: pointer
+            border-radius: 0.2rem
+
+            &:hover
+                transform: scale(1.1)
+                background-color: rgb(223, 223, 223)
+                box-shadow: 3px 3px 4px rgb(0, 18, 44)
