Efeito de drag and drop

--- a/kandan/src/Components/Column/style.sass
+++ b/kandan/src/Components/Column/style.sass
@@ -4,7 +4,13 @@
     display: flex
     flex-direction: column
     background-color: $background
-    padding: 1rem
-    min-height: 400px
-    gap: 10px
+    border-radius: 0.4rem
+    box-shadow: 0 0 10px 4px rgb(212, 212, 212)
     flex: 1 1 320px // pode deixar grande? pode deixar pequeno? tamanho
+    gap: 10px
+    min-height: 400px
+    padding: 1rem
+    width: 20vw
+
+    h3
+        text-align: center
