--- a/kandan/src/Style/cadCadastro.sass
+++ b/kandan/src/Style/cadCadastro.sass
@@ -65,7 +65,10 @@ form
     gap: 3rem
 
     div
-        width: 20vw
+        
+
+        h3
+            text-align: center
 
 .mensagemCard
     position: absolute
