--- a/kandan/src/Components/Card/style.sass
+++ b/kandan/src/Components/Card/style.sass
@@ -1,26 +1,39 @@
 .card
     display: flex
     flex-direction: column
-    width: 40v
     color: white
-    font-weight: 300
-    background-color: rgb(0, 44, 110)
+    font-weight: 400
+    background-color: rgb(1, 31, 77)
     border-radius: 0.5rem
-    padding: 1rem
-    gap: 0.5rem
+    padding: 1.3rem
+    gap: 0.8rem
+
+    h4
+        text-align: center
 
     .section_card_button
         display: flex
         gap: 1rem
 
-        button
-            padding: 0.3rem 1rem
-            border: none
-            outline: none
-            cursor: pointer
-            border-radius: 0.2rem
+    button
+        padding: 0.3rem 1rem
+        border: none
+        outline: none
+        cursor: pointer
+        border-radius: 0.2rem
 
-            &:hover
-                transform: scale(1.1)
-                background-color: rgb(223, 223, 223)
-                box-shadow: 3px 3px 4px rgb(0, 18, 44)
+        &:hover
+            transform: scale(1.01)
+            background-color: rgb(223, 223, 223)
+            box-shadow: 3px 3px 4px rgb(0, 18, 44)
+        
+    select
+        border: none
+        outline: none
+        padding: 0.5rem
+        border-radius: 0.2rem
+
+        &:hover 
+            transform: scale(1.01)
+            background-color: rgb(223, 223, 223)
+            box-shadow: 3px 3px 4px rgb(0, 18, 44)
