--- a/kandan/src/Style/cadCadastro.sass
+++ b/kandan/src/Style/cadCadastro.sass
@@ -3,10 +3,13 @@
 form
     display: flex
     flex-direction: column
+    align-items: center
     gap: 1rem
-    width: 90%
+    width: 60%
     height: auto
-    padding: 5px
+    padding: 2rem 1rem
+    border-radius: 0.4rem
+    box-shadow: 0 0 10px 4px rgb(212, 212, 212)
 
     h1
         text-align: center
@@ -15,6 +18,7 @@ form
         display: flex
         flex-direction: column
         gap: 0.5rem
+        width: 90%
 
         select 
             background-color: rgb(230, 230, 230)
@@ -59,6 +63,7 @@ form
         cursor: pointer
         font-weight: 700
         padding: 1rem
+        width: 90%
 
 .sectionQuadro 
     display: flex
