--- a/kandan/src/Components/Card/style.sass
+++ b/kandan/src/Components/Card/style.sass
@@ -5,7 +5,7 @@
   padding: 1rem
   margin-bottom: 1rem
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1)
-  transition: transform 0.2s ease-in-out
+  transition: transform 250ms ease, box-shadow 250ms ease
   cursor: grab
 
   &:hover
@@ -50,16 +50,15 @@ button
 
 .section_status
     display: flex
-    align-content: center
+    align-items: center
     justify-content: space-between
     margin-top: 1rem
 
     select
-        margin-top: 1rem
-        padding: 0.4rem
-        border-radius: 4px
-        border: 1px solid #01214d
-        background-color: #fff
-        color: #01214d
-        font-weight: bold
-
+      padding: 0.4rem
+      border-radius: 4px
+      border: 1px solid #01214d
+      background-color: #fff
+      color: #01214d
+      font-weight: bold
+      width: 40%
