Inserido método de atualizar e ajustes no drag and drop

--- a/kandan/src/Components/Modal/style.sass
+++ b/kandan/src/Components/Modal/style.sass
@@ -8,11 +8,16 @@ dialog
     border-radius: 8px
     box-shadow: 0 0 10px rgba(0,0,0,0.3)
 
-    header
+    .header_modal
         display: flex
-        justify-content: space-between
-        align-items: center
+        justify-content: flex-end
 
-    footer
-        margin-top: 1rem
-        text-align: right
+        button
+            background: none
+            border: none
+            font-size: 1.5rem
+            cursor: pointer
+            color: #333
+
+            &:hover
+                color: #000
