--- a/kandan/src/Style/cadCadastro.sass
+++ b/kandan/src/Style/cadCadastro.sass
@@ -5,7 +5,7 @@ form
     flex-direction: column
     align-items: center
     gap: 1rem
-    width: 60%
+    width: 40%
     height: auto
     padding: 2rem 1rem
     border-radius: 0.4rem
@@ -70,8 +70,6 @@ form
     gap: 3rem
 
     div
-        
-
         h3
             text-align: center
 
@@ -84,3 +82,12 @@ form
     border-radius: 0.5rem
     color: rgb(31, 31, 31)
     font-weight: 500
+
+
+@media (max-width: 1000px)
+    form
+        width: 60%
+
+    .sectionQuadro
+        display: flex
+        flex-direction: column
